--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7",
+    "react-formidable": "0.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {},
