--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_URL=mongodb+srv://Hiten:HitenSharmaDatabase@cluster0.qz6gf.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DB_URL=mongodb://127.0.0.1:27017
 TOKEN_SECRET=MyFirstJWT
